zero-schema-macros/tests/ui/fail/31_hidden_proof_bypass.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/31_hidden_proof_bypass.rs:16:66
   |
16 |     let make_ref_input = SharedInput::<Wire>::from_exact(&bytes, ()).unwrap();
   |                          -------------------------------         ^^ expected `__ZeroSchemaInputAccessToken`, found `()`
   |                          |
   |                          arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/src/access.rs
   |
   |     pub fn from_exact(bytes: &'bytes [u8], _: W::Token) -> Result<Self, LayoutError> {
   |            ^^^^^^^^^^
help: try wrapping the expression in `__zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken` (its field is private, but it's local to this crate and its privacy can be changed)
   |
16 |     let make_ref_input = SharedInput::<Wire>::from_exact(&bytes, __zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken { _private: () }).unwrap();
   |                                                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++    +

error[E0308]: mismatched types
  --> tests/ui/fail/31_hidden_proof_bypass.rs:17:50
   |
17 |     let _ = <Support as SchemaSupport>::make_ref(make_ref_input);
   |             ------------------------------------ ^^^^^^^^^^^^^^ expected `ProvedShared<'_, OpaqueSupport, ...>`, found `SharedInput<'_, OpaqueWire>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `ProvedShared<'_, OpaqueSupport, OpaqueWire>`
              found struct `SharedInput<'_, OpaqueWire>`
note: associated function defined here
  --> $WORKSPACE/src/__private.rs
   |
   |     fn make_ref<'wire>(proof: ProvedShared<'wire, Self, Self::Wire>) -> Self::Ref<'wire>;
   |        ^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/fail/31_hidden_proof_bypass.rs:19:65
   |
19 |     let literal_input = SharedInput::<Wire>::from_exact(&bytes, ()).unwrap();
   |                         -------------------------------         ^^ expected `__ZeroSchemaInputAccessToken`, found `()`
   |                         |
   |                         arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/src/access.rs
   |
   |     pub fn from_exact(bytes: &'bytes [u8], _: W::Token) -> Result<Self, LayoutError> {
   |            ^^^^^^^^^^
help: try wrapping the expression in `__zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken` (its field is private, but it's local to this crate and its privacy can be changed)
   |
19 |     let literal_input = SharedInput::<Wire>::from_exact(&bytes, __zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken { _private: () }).unwrap();
   |                                                                 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++    +

error[E0308]: mismatched types
  --> tests/ui/fail/31_hidden_proof_bypass.rs:25:69
   |
25 |     let materialize_input = SharedInput::<Wire>::from_exact(&bytes, ()).unwrap();
   |                             -------------------------------         ^^ expected `__ZeroSchemaInputAccessToken`, found `()`
   |                             |
   |                             arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/src/access.rs
   |
   |     pub fn from_exact(bytes: &'bytes [u8], _: W::Token) -> Result<Self, LayoutError> {
   |            ^^^^^^^^^^
help: try wrapping the expression in `__zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken` (its field is private, but it's local to this crate and its privacy can be changed)
   |
25 |     let materialize_input = SharedInput::<Wire>::from_exact(&bytes, __zero_schema_support_opaque_fa15597ea33dbf3e::__ZeroSchemaInputAccessToken { _private: () }).unwrap();
   |                                                                     +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++    +

error[E0308]: mismatched types
  --> tests/ui/fail/31_hidden_proof_bypass.rs:26:56
   |
26 |     let _ = <Opaque as LogicalSchema<'_>>::materialize(materialize_input);
   |             ------------------------------------------ ^^^^^^^^^^^^^^^^^ expected `ProvedShared<'_, OpaqueSupport, ...>`, found `SharedInput<'_, OpaqueWire>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `ProvedShared<'_, OpaqueSupport, OpaqueWire>`
              found struct `SharedInput<'_, OpaqueWire>`
note: associated function defined here
  --> $WORKSPACE/src/__private.rs
   |
   |     fn materialize(
   |        ^^^^^^^^^^^
